--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tflariton Bank</title>
+    <title>Flariton Bank</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Flariton Bank</h1>
-    <h3> </h3>
+    <h1 >Flariton Bank</h1>
+    <h3></h3>
 
     <!-- Balance Display -->
     <div id="balance-container">
@@ -37,8 +37,9 @@
         <button type="submit">Add Transaction</button>
     </form>
 
-    <!-- Transactions Table -->
-     <h3>transactions table</h3>
+   <!-- table that contains all transactions  -->
+    
+     <h3>Transactions table</h3>
     <table id="transactions-table">
         <thead>
             <tr>
@@ -50,7 +51,7 @@
             </tr>
         </thead>
         <tbody>
-            <!-- Transactions will be injected here by JavaScript -->
+<!-- aded transactions -->
         </tbody>
     </table>
 
